# mixseek-core

./: .bumpversion.cfg  .env.local.template  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.ja.md  README.md  SECURITY.md  pyproject.toml  renovate.json
.claude/: sphinx.md
.claude/commands/: refactor-scan.md  review-pr-comments.md
.claude/plans/: log-refactor.md
.gemini/: config.yaml  styleguide.md
.github/workflows/: ci.yml  docs.yml  release.yml
.skills/: README.md
.skills/detect-python-command/: SKILL.md
.skills/mixseek-config-validate/: SKILL.md
.skills/mixseek-evaluator-config/: SKILL.md
.skills/mixseek-model-list/: SKILL.md
.skills/mixseek-orchestrator-config/: SKILL.md
.skills/mixseek-team-config/: SKILL.md
.skills/mixseek-workspace-init/: SKILL.md
.specify/memory/: constitution.md
.streamlit/: config.toml
ai_working/ddd/: docs_index.txt  docs_status.md  plan.md
dockerfiles/: Makefile.common  README.ja.md  README.md
dockerfiles/ci/: .dockerignore  Dockerfile  Makefile  README.md
dockerfiles/dev/: .env.dev.template  Dockerfile  Makefile
dockerfiles/prod/: Dockerfile  Makefile
docs/: advanced-features.md  conf.py  configuration-guide.md  configuration-reference.md  custom-member-agent.md  database-schema.md  developer-guide.md  docker-setup.md  getting-started-advanced.md  getting-started.md  glossary.md  index.md  member-agents.md  observability.md  orchestrator-guide.md  quickstart.md  team-guide.md  ui-docker.md  ui-guide.md  versioning.md
docs/api/: index.md
docs/appendix/: pydantic-ai.md  valid-models.md
docs/data/: valid-models.csv
docs/internal/: future-enhancements.md
examples/: team-inline-agents.toml  team-leader-empty-prompt.toml  team-ref-agents.toml  team-solo-leader.toml  team-with-system-prompt.toml
examples/adk-research-orchestrator-sample/: README.md
examples/agents/: analyst-with-system-prompt.toml  analyst.toml  code_execution_agent.toml  plain_agent.toml  researcher.toml  summarizer.toml  team-web-fetch.toml  web_fetch_agent_anthropic.toml  web_fetch_agent_google.toml
examples/bitbank-orchestrator-sample/: README.md
examples/config_templates/: code_execution_agent.toml  plain_agent.toml  web_search_agent.toml
examples/configs/: judgment.toml
examples/orchestrator-sample/: README.md
examples/workflow-sample/: README.md
internal/: concept.md  workflow-mode-spec.md
internal/workflow-mode/: workflow-mode-plan.md
specs/001-specs/: spec.md
specs/002-config/: spec.md
specs/003-dockerfiles/: data-model.md  plan.md  quickstart.md  research-advanced-patterns.md  research.md  spec.md  tasks.md
specs/004-modify-docker-user/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-command/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-evaluator/: README.md  data-model.md  evaluation-flow-diagram.md  implementation-quick-reference.md  llm-judge-research-findings.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-orchestration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-leader/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-member/: DRY-ANALYSIS-INDEX.md  DRY-COMPLIANCE-ANALYSIS.md  DRY-QUICK-REFERENCE.md  DRY-SEARCH-SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-dev/: spec.md
specs/011-model-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-round-controller/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-configuration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-ui/: data-model.md  logfire-integration-plan.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-user-prompt-builder-team/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-round-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-ci-github-actions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-custom-member/: research.md  spec.md
specs/019-custom-member-api/: data-model.md  (+5 more)
tests/: __init__.py  conftest.py
(+529 files in other folders)
