[build-system]
requires = ["uv-build>=0.9.15"]
build-backend = "uv_build"

[project]
name = "mixseek-core"
version = "0.1.0a6"
description = "Pydantic AI-based multi-agent framework with hierarchical task delegation, round-based evaluation, and workspace CLI"
readme = "README.md"
requires-python = ">=3.13.7"
authors = [
    { name = "AlpacaTech Co. Ltd.", email = "ask@alpaca-tech.ai" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = ["multi-agent", "ai-agent", "pydantic-ai", "llm", "framework", "google-genai", "anthropic", "openai"]
dependencies = [
    "duckdb>=1.4.2",
    "google-cloud-aiplatform>=1.128.0",
    "google-genai>=1.52.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.26.0",
    "pydantic-settings>=2.12.0",
    "streamlit>=1.51.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
# Observability with Logfire (optional for development/debugging)
logfire = [
    "logfire>=4.15.1",
]
adk = [
    "google-adk>=1.19.0",
]

[project.scripts]
mixseek = "mixseek.cli.main:app"

[project.urls]
Homepage = "https://github.com/mixseek/mixseek-core"
Repository = "https://github.com/mixseek/mixseek-core"
Documentation = "https://mixseek.github.io/mixseek-core/"
Issues = "https://github.com/mixseek/mixseek-core/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
    "mypy>=1.19.0",
    "pandas-stubs",
    "logfire>=4.15.1",  # Observability for development/debugging
    "aiohttp>=3.13.0",  # Required for WebhookIntegrationHook tests
    "commitizen>=4.0.0",  # PEP 440-native version management
]
docs = [
    "sphinx>=8.2.3,<9",
    "myst-parser>=4.0.1",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-mermaid>=1.2.3",
]

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "mixseek"

[tool.ruff]
line-length = 119
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E203", "N999"]  # N999: Allow Streamlit page naming (1_execution.py)

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
mypy_path = ["src"]
exclude = [
    "build/",
    "debug/",
    "draft/",
    "docs/",
    "workspaces/",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = "duckdb"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_no_return = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (medium speed, mocked external services)",
    "e2e: End-to-end tests (slow, real external services)",
    "contract: Contract tests (API interface validation)",
    "performance: Performance benchmark tests",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0a6"
version_files = [
    "pyproject.toml:version",
    "uv.lock:version"
]
tag_format = "v$version"
update_changelog_on_bump = true
annotated_tag = true
bump_message = "release: bump version to $new_version"
changelog_file = "CHANGELOG.md"
changelog_incremental = true
version_scheme = "pep440"
